6429504 crle(1) shows wrong defaults for non-existant 64-bit config file

--- a/usr/src/cmd/sgs/crle/amd64/Makefile
+++ b/usr/src/cmd/sgs/crle/amd64/Makefile
@@ -39,5 +39,7 @@ LINTFLAGS64 +=	$(VAR_LINTFLAGS64)
 
 ROOTPROG =	$(ROOTPROG64)
 
+lint:		$(LINTOUT64)
+
 include		../Makefile.targ
 include		../../Makefile.sub.64
