--- a/usr/src/cmd/sendmail/aux/Makefile
+++ b/usr/src/cmd/sendmail/aux/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,11 +18,12 @@
 #
 # CDDL HEADER END
 #
-#
-#ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 1990 - 2002 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
+#
+
+#
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 # cmd/sendmail/aux/Makefile
 #
@@ -59,11 +59,11 @@ $(ROOTBIN)/mailq :=	FILEMODE = 4555
 
 INCPATH=	-I../src -I../db -I../include
 
-ENVDEF=		$(RLS_DEF) -DNOT_SENDMAIL
+ENVDEF=		-DNOT_SENDMAIL
 SUNENVDEF=	-DSUN_EXTENSIONS -DUSE_VENDOR_CF_PATH
 DBMDEF=		-DNDBM -DNEWDB
 
-CPPFLAGS =	$(INCPATH) $(ENVDEF) $(SUNENVDEF) $(DBMDEF) $(CPPFLAGS.master)
+CPPFLAGS =	$(INCPATH) $(ENVDEF) $(SUNENVDEF) $(DBMDEF) $(CPPFLAGS.sm)
 
 .KEEP_STATE:
 
