6365629 add support for LDOMS to cpumem-diagnosis.so and cpumem-retire.so 6365633 add support for LDOMS to etm.so 6365645 add support for LDOMS to cpu and mem scheme plugins

--- a/usr/src/cmd/fm/modules/sun4v/cpumem-retire/Makefile
+++ b/usr/src/cmd/fm/modules/sun4v/cpumem-retire/Makefile
@@ -24,13 +24,24 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
+MODULE = cpumem-retire
+CLASS = arch
 ARCH = sun4v
+SRCS = \
+	cma_cpu.c \
+	cma_main.c \
+	cma_page.c \
+	cma_cpu_arch.c \
+	cma_page_arch.c
 
-INCDIRS = $(SRC)/uts/sun4v \
-	$(ROOT)/usr/platform/sun4v/include
+include ../../Makefile.plugin
 
-include ../../sun4/cpumem-diagnosis/Makefile.cpumem
+CMA_VERSION = "1.1"
 
-LDLIBS += -L$(ROOTLIB)/fm -lmdesc \
-	-L$(ROOT)/usr/platform/$(ARCH)/lib/fm/fmd -lldom
+INCDIRS = . \
+	 $(ROOT)/usr/platform/sun4v/include
+
+CPPFLAGS += $(INCDIRS:%=-I%) -DCMA_VERSION='$(CMA_VERSION)'
 LDFLAGS += -R/usr/lib/fm -R/usr/platform/$(ARCH)/lib/fm/fmd
+LDLIBS += -L$(ROOTLIB)/fm -ltopo -lrt \
+	-L$(ROOT)/usr/platform/$(ARCH)/lib/fm/fmd -lldom
