--- a/usr/src/cmd/fm/modules/sun4v/cpumem-retire/cpumem-retire.conf
+++ b/usr/src/cmd/fm/modules/sun4v/cpumem-retire/cpumem-retire.conf
@@ -24,13 +24,19 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-ARCH = sun4v
-
-INCDIRS = $(SRC)/uts/sun4v \
-	$(ROOT)/usr/platform/sun4v/include
-
-include ../../sun4/cpumem-diagnosis/Makefile.cpumem
-
-LDLIBS += -L$(ROOTLIB)/fm -lmdesc \
-	-L$(ROOT)/usr/platform/$(ARCH)/lib/fm/fmd -lldom
-LDFLAGS += -R/usr/lib/fm -R/usr/platform/$(ARCH)/lib/fm/fmd
+#
+# cpumem-retire
+#
+setprop cpu_tries 10
+setprop cpu_delay 1sec
+#
+setprop cpu_ret_mindelay 5sec
+setprop cpu_ret_maxdelay 5min
+#
+setprop page_ret_mindelay 1sec
+setprop page_ret_maxdelay 5min
+#
+setprop cpu_offline_enable true
+setprop cpu_forced_offline true
+setprop cpu_blacklist_enable true
+setprop page_retire_enable true
