--- a/usr/src/lib/fm/libldom/spec/sparcv9/Makefile
+++ b/usr/src/lib/fm/libldom/spec/sparcv9/Makefile
@@ -24,13 +24,12 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-ARCH = sun4v
+# To enable apptrace, comment out the next line
+DISABLE_APPTRACE=   $(POUND_SIGN)
 
-INCDIRS = $(SRC)/uts/sun4v \
-	$(ROOT)/usr/platform/sun4v/include
+include ../Makefile.targ
+include $(SRC)/lib/Makefile.lib
+include $(SRC)/lib/Makefile.lib.64
+include $(SRC)/lib/Makefile.spec
 
-include ../../sun4/cpumem-diagnosis/Makefile.cpumem
-
-LDLIBS += -L$(ROOTLIB)/fm -lmdesc \
-	-L$(ROOT)/usr/platform/$(ARCH)/lib/fm/fmd -lldom
-LDFLAGS += -R/usr/lib/fm -R/usr/platform/$(ARCH)/lib/fm/fmd
+$(DISABLE_APPTRACE)install: $(ROOTABILIB64)
