--- a/usr/src/cmd/sendmail/cf/Makefile
+++ b/usr/src/cmd/sendmail/cf/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -30,9 +29,9 @@
 
 include		../../Makefile.cmd
 
-CFS=		sendmail.cf submit.cf
+CFS=		sendmail.cf submit.cf local.cf
 
-SUBCFS=		cf/sendmail.cf cf/submit.cf
+SUBCFS=		cf/sendmail.cf cf/submit.cf cf/local.cf
 
 COMMONM4FILES=	m4/version.m4 m4/cf.m4 m4/cfhead.m4 m4/proto.m4 \
 		ostype/solaris8.m4 domain/solaris-generic.m4 \
@@ -46,6 +45,8 @@ ROOTETCMAILCF =	$(ROOTETCMAIL)/cf
 
 BUILDPARTS =	$(ROOTETCMAILCF)/README \
 		$(ROOTETCMAILCF)/cf/Makefile \
+		$(ROOTETCMAILCF)/cf/local.cf \
+		$(ROOTETCMAILCF)/cf/local.mc \
 		$(ROOTETCMAILCF)/cf/sendmail.cf \
 		$(ROOTETCMAILCF)/cf/sendmail.mc \
 		$(ROOTETCMAILCF)/cf/submit.cf \
