--- a/usr/src/cmd/sendmail/cf/cf/Makefile
+++ b/usr/src/cmd/sendmail/cf/cf/Makefile
@@ -2,7 +2,7 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, (the "License").
+# Common Development and Distribution License (the "License").
 # You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
@@ -48,7 +48,7 @@ RM=	/usr/bin/rm -f
 	test ! -f $@ || $(MV) $@ $@.prev
 	$(M4) ${CFDIR}/m4/cf.m4 $*.mc > $@
 
-ALL=	sendmail.cf submit.cf
+ALL=	sendmail.cf submit.cf local.cf
 
 all: $(ALL)
 
