--- a/usr/src/cmd/svc/seed/Makefile
+++ b/usr/src/cmd/svc/seed/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,8 +18,7 @@
 #
 # CDDL HEADER END
 #
-#
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -171,6 +169,22 @@ miniroot.db: common.db $(MINIROOT_DESCRIPTIONS) $(CONFIGD) $(SVCCFG)
 		SVCCFG_CONFIGD_PATH=$(CONFIGD) \
 		$(SVCCFG) import $$m; \
 	done
+	#
+	# Make sure the miniroot's syslogd and rpcbind do not respond
+	# to packets from outside the machine. Since we cannot set property
+	# values by applying a profile yet, we need to set them explicitly
+	# with svccfg commands.
+	#
+	SVCCFG_DTD=../dtd/service_bundle.dtd.1 \
+	SVCCFG_REPOSITORY=$(SRC)/cmd/svc/seed/miniroot.db \
+	SVCCFG_CONFIGD_PATH=$(CONFIGD) \
+	$(SVCCFG) -s svc:/system/system-log \
+	    setprop config/log_from_remote = false
+	#
+	SVCCFG_DTD=../dtd/service_bundle.dtd.1 \
+	SVCCFG_REPOSITORY=$(SRC)/cmd/svc/seed/miniroot.db \
+	SVCCFG_CONFIGD_PATH=$(CONFIGD) \
+	$(SVCCFG) -s svc:/network/rpc/bind setprop config/local_only = true
 
 install: install_global install_nonglobal install_miniroot
 
