6411941 Need to translate fault event FMRIs in faults from SP 6414871 FMA events do not contain OPL platform Chassis Serial Number in chassis-id enumerator

--- a/usr/src/cmd/fm/modules/SUNW,SPARC-Enterprise/cpumem-retire/Makefile
+++ b/usr/src/cmd/fm/modules/SUNW,SPARC-Enterprise/cpumem-retire/Makefile
@@ -24,6 +24,34 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = event-transport cpumem-retire
+PLATFORMS = SUNW,SPARC-Enterprise
+CLASS = plat
+MODULE = cpumem-retire
 
-include ../../Makefile.subdirs
+CPUMEM_RETIRE_COMMON = ../../common/$(MODULE)
+
+INCDIRS += .
+INCDIRS += $(CPUMEM_RETIRE_COMMON)
+
+SRCS = \
+        cma_cpu.c \
+        cma_cpu_hc.c \
+        cma_main.c \
+        cma_page.c
+
+include ../../Makefile.plugin
+
+CMA_VERSION = "1.1"
+
+
+LIBDIRS = $(ROOT)/usr/platform/$(PLATFORMS)/lib
+CPPFLAGS += $(INCDIRS:%=-I%) -DCMA_VERSION='$(CMA_VERSION)'
+LDFLAGS += -R/usr/lib/fm
+LDLIBS += -L$(ROOTLIB)/fm -ltopo -lrt
+
+%.o: $(CPUMEM_RETIRE_COMMON)/%.c
+	$(COMPILE.c) -o $@ $<
+	$(CTFCONVERT_O)
+
+%.ln: $(CPUMEM_RETIRE_COMMON)/%.c
+	$(LINT.c) -c $<
