--- a/usr/src/cmd/fm/modules/SUNW,SPARC-Enterprise/cpumem-retire/cpumem-retire.conf
+++ b/usr/src/cmd/fm/modules/SUNW,SPARC-Enterprise/cpumem-retire/cpumem-retire.conf
@@ -22,8 +22,18 @@
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+#pragma ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = event-transport cpumem-retire
-
-include ../../Makefile.subdirs
+#
+# cpumem-retire
+#
+setprop cpu_tries 10
+setprop cpu_delay 1sec
+#
+setprop page_ret_mindelay 1sec
+setprop page_ret_maxdelay 5min
+#
+setprop cpu_offline_enable true
+setprop cpu_forced_offline true
+setprop cpu_blacklist_enable false
+setprop page_retire_enable true
