--- a/usr/src/lib/libresolv2/include/Makefile
+++ b/usr/src/lib/libresolv2/include/Makefile
@@ -1,5 +1,26 @@
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# CDDL HEADER START
+#
+# The contents of this file are subject to the terms of the
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
+#
+# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+# or http://www.opensolaris.org/os/licensing.
+# See the License for the specific language governing permissions
+# and limitations under the License.
+#
+# When distributing Covered Code, include this CDDL HEADER in each
+# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+# If applicable, add the following below this CDDL HEADER, with the
+# fields enclosed by brackets "[]" replaced with your own identifying
+# information: Portions Copyright [yyyy] [name of copyright owner]
+#
+# CDDL HEADER END
+#
+
+#
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -31,11 +52,9 @@ clobber: clean
 # rebuild them every time.
 
 os_version.h: make_os_version FRC
-	$(CHMOD) a+x make_os_version
 	./make_os_version
 
 port_ipv6.h: probe_ipv6 FRC
-	$(CHMOD) a+x probe_ipv6
 	CC="$(CC)" ./probe_ipv6
 
 FRC:
