6433683 FMA SNMP agent can return incorrect sunFmFaultEventResource 6433685 sunFmFaultEventResource never returned to snmpwalkers 6433686 FMA SNMP agent can leak memory 6433687 sunFmResourceCount never returned to snmpwalkers 6433688 faulty resource list obtained from SNMP may be inconsistent 6433690 libfmd_snmp could be linted

--- a/usr/src/lib/fm/libfmd_snmp/Makefile
+++ b/usr/src/lib/fm/libfmd_snmp/Makefile
@@ -51,11 +51,9 @@ lint := TARGET = lint
 
 .KEEP_STATE:
 
-all clean clobber: spec .WAIT $(SUBDIRS)
+all lint clean clobber: spec .WAIT $(SUBDIRS)
 
 install: install_h install_mibs spec .WAIT $(SUBDIRS)
-
-lint:
 
 install_h: $(ROOTFMHDRS)
 
