--- a/usr/src/uts/sun4v/ontario/io/tsalarm.conf
+++ b/usr/src/uts/sun4v/ontario/io/tsalarm.conf
@@ -18,24 +18,14 @@
 #
 # CDDL HEADER END
 #
-# uts/sun4v/ontario/Makefile.files
+#
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
+#
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
+# Netra T2000 tsalarm driver
+#
+name="tsalarm" parent="pseudo" instance=0;
 
-#
-#	Global definitions for sun4v implementation specific modules.
-#
-
-#
-# Define objects.
-#
-ONTARIO_PLATMOD_OBJS	= ontario.o
-ONTARIO_TSALARM_OBJS    = tsalarm.o
-
-#
-#	include ontario header files
-#
-INC_PATH	+= -I$(UTSBASE)/sun4v -I$(UTSBASE)/sun4v/ontario -I$(UTSBASE)/sun4u/mpxu
