--- a/usr/src/uts/sun4v/ontario/Makefile.rules
+++ b/usr/src/uts/sun4v/ontario/Makefile.rules
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,7 +18,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -45,6 +44,10 @@ $(OBJS_DIR)/%.o:	$(UTSBASE)/sun4v/ontario/os/%.c
 	$(COMPILE.c) -o $@ $<
 	$(CTFCONVERT_O)
 
+$(OBJS_DIR)/%.o:      $(UTSBASE)/sun4v/ontario/io/%.c
+	$(COMPILE.c) -o $@ $<
+	$(CTFCONVERT_O)
+
 #
 #	Section 1b: Lint `object' build rules
 #
@@ -52,3 +55,5 @@ $(OBJS_DIR)/%.o:	$(UTSBASE)/sun4v/ontario/os/%.c
 $(LINTS_DIR)/%.ln:	$(UTSBASE)/sun4v/ontario/os/%.c
 	@($(LHEAD) $(LINT.c) $< $(LTAIL))
 
+$(LINTS_DIR)/%.ln:    $(UTSBASE)/sun4v/ontario/io/%.c
+	 @($(LHEAD) $(LINT.c) $< $(LTAIL))
