--- a/usr/src/uts/common/rpcsvc/Makefile
+++ b/usr/src/uts/common/rpcsvc/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,7 +21,7 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2004 Sun Microsystems, Inc.
+# Copyright 2006 Sun Microsystems, Inc.
 # All rights reserved.  Use is subject to license terms.
 #
 # uts/common/rpcsvc/Makefile
@@ -36,7 +35,7 @@ include ../../../Makefile.master
 # completely via rpcgen.  The NLM description should go here some day.
 # Also, the v3 headers have been hacked so that they no longer
 # quite reflect what goes over the wire.
-RPCGEN_SRC=	autofs_prot.x sm_inter.x nfsauth_prot.x nsm_addr.x
+RPCGEN_SRC=	autofs_prot.x sm_inter.x nsm_addr.x
 
 DERIVED_HDRS=	$(RPCGEN_SRC:%.x=%.h)
 
@@ -55,9 +54,6 @@ $(ROOTDIRS)/%: %
 # for the kernel to reference, without going so far as to install them.
 #
 all_h: $(DERIVED_HDRS)
-
-nfsid_map_prot.h: nfsid_map_prot.x
-		$(RPCGEN) -C -M -h nfsid_map_prot.x -o $@
 
 install_h: all_h $(ROOTDIRS) $(ROOTHDRS)
 
