6432948 build (etm.so) fails on machine running snv_28 or older 6432953 build (llib-lldom.ln) fails when using ParallelMake make 6434264 libldom.so is not installed by BFU on sun4u systems

--- a/usr/src/cmd/fm/modules/sun4v/cpumem-diagnosis/Makefile
+++ b/usr/src/cmd/fm/modules/sun4v/cpumem-diagnosis/Makefile
@@ -31,6 +31,5 @@ INCDIRS = $(SRC)/uts/sun4v \
 
 include ../../sun4/cpumem-diagnosis/Makefile.cpumem
 
-LDLIBS += -L$(ROOTLIB)/fm -lmdesc \
-	-L$(ROOT)/usr/platform/$(ARCH)/lib/fm/fmd -lldom
-LDFLAGS += -R/usr/lib/fm -R/usr/platform/$(ARCH)/lib/fm/fmd
+LDLIBS += -L$(ROOTLIB)/fm -lmdesc -lldom
+LDFLAGS += -R/usr/lib/fm
