--- a/usr/src/lib/fm/libldom/sparcv9/Makefile
+++ b/usr/src/lib/fm/libldom/sparcv9/Makefile
@@ -32,9 +32,6 @@ include ../../../Makefile.lib.64
 
 DYNFLAGS += -R/usr/lib/fm/$(MACH64)
 
-install: all $(ROOTLIBDIR64) $(ROOTLIBS64) $(ROOTLINKS64) $(ROOTLINT64)
+install: all $(ROOTLIBS64) $(ROOTLINKS64) $(ROOTLINT64)
 
 install_h:
-
-$(ROOTLIBDIR64):
-	$(INS.dir)
