--- a/usr/src/cmd/fm/schemes/mem/sparc/Makefile
+++ b/usr/src/cmd/fm/schemes/mem/sparc/Makefile
@@ -30,9 +30,8 @@ include ../Makefile.com
 
 
 CPPFLAGS += -I$(ROOT)/usr/platform/sun4v/include
-LDLIBS += -L$(ROOTLIB)/fm -L$(ROOT)/usr/platform/sun4v/lib/fm/fmd \
-	-lmdesc -ltopo -lldom
-LDFLAGS += -R/usr/lib/fm -R/usr/platform/sun4v/lib/fm/fmd
+LDLIBS += -L$(ROOTLIB)/fm -lmdesc -ltopo -lldom
+LDFLAGS += -R/usr/lib/fm
 
 include ../../Makefile.targ
 
