--- a/usr/src/lib/libdtrace/amd64/Makefile
+++ b/usr/src/lib/libdtrace/amd64/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,12 +28,12 @@
 ASFLAGS += $(AS_PICFLAGS) -P -D_ASM
 
 MAPDIR = ../spec/amd64
-MACHOBJS = dis_tables.o dt_asmsubr.o
+MACHOBJS = dis_tables.o
 
 include ../Makefile.com
 include ../../Makefile.lib.64
 
-SRCS += $(SRC)/common/dis/i386/dis_tables.c ../$(MACH)/dt_asmsubr.s
+SRCS += $(SRC)/common/dis/i386/dis_tables.c
 CPPFLAGS += -I$(SRC)/common/dis/i386
 CPPFLAGS += -D_ELF64
 
