6436297 printmgr/helptools' Makefile has been all but abandoned by 6432546

--- a/usr/src/cmd/print/printmgr/com/sun/admin/pm/client/Makefile
+++ b/usr/src/cmd/print/printmgr/com/sun/admin/pm/client/Makefile
@@ -99,7 +99,8 @@ $(MSGFILES):=	OWNER = root
 $(MSGFILES):=	GROUP = lp
 $(MSGFILES):=	FILEMODE = 644
 
-CLEANFILES=	*.class pmHelpResources.java pmCopyright.java
+CLEANFILES=	*.class pmHelpResources.java pmCopyright.java \
+	    	helptools/*.class helptools/parsehelp
 CLOBBERFILES=
 
 #
@@ -144,5 +145,4 @@ jstyle:
 lint:
 clean:
 	$(RM) $(CLEANFILES)
-	cd helptools; $(MAKE) clean
 clobber: clean
