--- a/usr/src/cmd/ypcmd/Makefile
+++ b/usr/src/cmd/ypcmd/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -32,7 +31,7 @@ NETYPPROG = ypbind ypxfr yppush udpublickey mkalias \
 		multi multi.awk stdethers stdhosts \
 		ypxfr_1perday ypxfr_1perhour ypxfr_2perday \
 		ypstart ypstop
-NIS2LDAPPROG = ypxfrd ypserv
+NIS2LDAPPROG = ypxfrd ypserv ypxfr
 METHOD = yp
 PROG=	$(BINPROG) $(SBINPROG) $(NETYPPROG) $(NIS2LDAPPROG) $(METHOD)
 
@@ -226,7 +225,7 @@ ypxfrd: $(YPXFRDOBJ) $(SHAREDOBJ)
 	$(POST_PROCESS)
 
 ypxfr: $(YPXFROBJ) $(COMMONOBJ) $(YPMASTEROBJ) $(SHAREDOBJ)
-	$(LINK.c) -o $@ $(YPXFROBJ) $(YPMASTEROBJ) $(COMMONOBJ) \
+	$(LINK.cc) -o $@ $(YPXFROBJ) $(YPMASTEROBJ) $(COMMONOBJ) \
 		$(SHAREDOBJ) $(LDLIBS)
 	$(POST_PROCESS)
 
