PSARC 2006/388 snapshot -r 6373978 want to take lots of snapshots quickly ('zfs snapshot -r')

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -853,6 +853,7 @@ ZFS_COMMON_OBJS +=		\
 	dsl_dir.o		\
 	dsl_dataset.o		\
 	dsl_pool.o		\
+	dsl_synctask.o		\
 	dmu_zfetch.o		\
 	dsl_prop.o		\
 	fletcher.o		\
