--- a/usr/src/lib/libfstyp/spec/Makefile.targ
+++ b/usr/src/lib/libfstyp/spec/Makefile.targ
@@ -18,46 +18,16 @@
 #
 # CDDL HEADER END
 #
+#ident	"%Z%%M%	%I%	%E% SMI"
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
-#
-#  /usr/src/cmd/lib/fs/hsfs is the directory of all ufs specific commands
-#  whose executable reside in $(INSDIR1) and $(INSDIR2).
-#
+# lib/libfstyp/spec/Makefile.targ
 
-SUBDIR1=        fstyp mkproto labelit ident
-SUBDIR2=        mount
-SUBDIRS=        $(SUBDIR1) $(SUBDIR2)
+LIBRARY	=	libfstyp.a
+VERS	=	.1
 
-all:=		TARGET= all
-install:=	TARGET= install
-clean:=		TARGET= clean
-clobber:=	TARGET= clobber
-lint:=		TARGET= lint
-catalog:=       TARGET= catalog
+OBJECTS	=	fstyp.o
 
-# for messaging catalog
-#
-POFILE= hsfs.po
-POFILES= $(SUBDIR2:%=%/%.po)
-
-
-.KEEP_STATE:
-
-.PARALLEL:	$(SUBDIRS)
-
-all:	$(SUBDIRS) 
-
-catalog:        $(SUBDIR2)
-	$(RM) $(POFILE)
-	cat $(POFILES) > $(POFILE)
-
-install clean clobber lint: $(SUBDIRS)
-
-$(SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(MFLAGS) $(TARGET)
-
-FRC:
+SPECCPP =
