--- a/usr/src/cmd/fs.d/udfs/Makefile
+++ b/usr/src/cmd/fs.d/udfs/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,11 +21,13 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1999 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 
-SUBDIRS=	fsck fsdb fstyp ident labelit mkfs mount
+SUBDIR1=	fstyp
+SUBDIR2=	fsck fsdb ident labelit mkfs mount
+SUBDIRS=	$(SUBDIR1) $(SUBDIR2)
 
 all:=		TARGET= all
 install:=	TARGET= install
@@ -39,7 +40,7 @@ catalog:=       TARGET= catalog
 # for messaging catalog
 #
 POFILE= udfs.po
-POFILES= $(SUBDIRS:%=%/%.po)
+POFILES= $(SUBDIR2:%=%/%.po)
 
 .KEEP_STATE:
 
@@ -49,7 +50,7 @@ all install:	$(SUBDIRS)
 
 catalog:        $(POFILE)
 
-$(POFILE):      $(SUBDIRS)
+$(POFILE):      $(SUBDIR2)
 	$(RM) 	$@
 	cat     $(POFILES)      > $@
 
