--- a/usr/src/cmd/fs.d/ufs/Makefile
+++ b/usr/src/cmd/fs.d/ufs/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,8 +21,7 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 1989, 1997, 2000, 2003 Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #  /usr/src/cmd/lib/fs/ufs is the directory of all ufs specific commands
@@ -36,10 +34,10 @@
 #
 
 
-SUBDIR1=	clri edquota ff fsck fsckall fsdb fsirand ident \
+SUBDIR1=	clri edquota ff fsck fsckall fsdb fsirand fstyp ident \
 		labelit lockfs ncheck quot quota quotacheck quotaon \
 		repquota tunefs
-SUBDIR2= 	df fssnap fstyp mkfs mount newfs volcopy
+SUBDIR2= 	df fssnap mkfs mount newfs volcopy
 ROLLDIR=	roll_log
 SUBDIRS=	$(ROLLDIR) $(SUBDIR1) $(SUBDIR2)
 
