6413062 mc-opl enhancement for opl platform 6414938 mem_unum_burst_pattern() in mem scheme doesn't set ENOTSUP if DIMM UNUM bursting fails 6423747 OPL: fru name need to reflect the model of the OPL pltaform 6435857 DIMM serial ids support  on OPL platforms

--- a/usr/src/uts/sun4u/opl/mc-opl/Makefile
+++ b/usr/src/uts/sun4u/opl/mc-opl/Makefile
@@ -72,6 +72,10 @@ CFLAGS += -dalign -DMC_EMULATION
 #CFLAGS += -dalign 
 
 #
+#	Dependency
+LDFLAGS	+= -dy -Ndrv/scfd
+
+#
 #	Default build targets.
 #
 .KEEP_STATE:
