6357052 zulu driver Makefile breaks lint without debug build 6419846 'make lint' and 'make check' should work in open-only ON workspaces 6419983 mc-amd driver Makefile breaks lint without debug build Contributed by Richard Lowe <richlowe@richlowe.net>.

--- a/usr/src/uts/i86pc/mc-amd/Makefile
+++ b/usr/src/uts/i86pc/mc-amd/Makefile
@@ -1,9 +1,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -63,6 +62,7 @@ CLEANFILES	+= $(MCAMD_OFF_H)
 CLOBBERFILES	+= $(MCAMD_OFF_H)
 
 $(OBJECTS): $(MCAMD_OFF_H)
+$(LINTS): $(MCAMD_OFF_H)
 
 #
 # Create mcamd_off.h
