--- a/usr/src/uts/sun4u/zuluvm/Makefile
+++ b/usr/src/uts/sun4u/zuluvm/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -110,7 +109,7 @@ install:	$(INSTALL_DEPS)
 #
 AS_INC_PATH	+= -I$(OBJS_DIR)
 
-ZULUVM_DEPS	+= zulu_hat_asm.o zulu_asm.o zulu_asm.ln
+ZULUVM_DEPS	+= zulu_hat_asm.o zulu_asm.o zulu_asm.ln zulu_hat_asm.ln
 
 CLEANFILES	+= $(ZULUVM_OFFSETS_H) $(ZULUVM_OFFSETS_OUT)
 
