--- a/usr/src/uts/sun4/ml/offsets.in
+++ b/usr/src/uts/sun4/ml/offsets.in
@@ -1,13 +1,12 @@
 \ offsets.in: input file to produce assym.h using the stabs program
-\ Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+\ Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 \ Use is subject to license terms.
 \
 \ CDDL HEADER START
 \
 \ The contents of this file are subject to the terms of the
-\ Common Development and Distribution License, Version 1.0 only
-\ (the "License").  You may not use this file except in compliance
-\ with the License.
+\ Common Development and Distribution License (the "License").
+\ You may not use this file except in compliance with the License.
 \
 \ You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 \ or http://www.opensolaris.org/os/licensing.
@@ -226,6 +225,14 @@ hme_blk	HMEBLK_SIZE
 	hblk_hme	HMEBLK_HME1
 	hblk_nextpa	HMEBLK_NEXTPA
 
+mmu_ctx MMU_CTX_SIZE
+	mmu_gnum	MMU_CTX_GNUM
+	mmu_cnum	MMU_CTX_CNUM
+	mmu_nctxs	MMU_CTX_NCTXS
+
+sfmmu_ctx	SFMMU_MMU_CTX_SIZE SFMMU_MMU_CTX_SHIFT
+	gnum		SFMMU_MMU_GC_NUM
+
 user	USIZEBYTES
 	u_comm
 	u_signal
@@ -366,6 +373,8 @@ cpu	CPUSIZE
 	cpu_m.tmp2			CPU_TMP2
 	cpu_m.mpcb			CPU_MPCB
 	cpu_m.cpu_private		CPU_PRIVATE
+	cpu_m.cpu_mmu_idx		CPU_MMU_IDX
+	cpu_m.cpu_mmu_ctxp            	CPU_MMU_CTXP
 	cpu_m.ptl1_state		CPU_PTL1
 
 cpu_core_t	CPU_CORE_SIZE	CPU_CORE_SHIFT
