6436753 remove $(__GNUC) from usr/src/lib/openssl/Makefile.openssl 6436754 remove VIA PadLock Advanced Cryptography Engine from OpenSSL

--- a/usr/src/lib/openssl/Makefile.openssl
+++ b/usr/src/lib/openssl/Makefile.openssl
@@ -52,15 +52,16 @@ OPENSSL_NO_XXX = \
 	-DOPENSSL_NO_EC \
 	-DOPENSSL_NO_ECDH \
 	-DOPENSSL_NO_ECDSA \
-	-DOPENSSL_NO_HW_CSWIFT \
-	-DOPENSSL_NO_HW_ATALLA \
-	-DOPENSSL_NO_HW_NURON \
-	-DOPENSSL_NO_HW_UBSEC \
+	-DOPENSSL_NO_HW_4758_CCA \
 	-DOPENSSL_NO_HW_AEP \
-	-DOPENSSL_NO_HW_SUREWARE \
+	-DOPENSSL_NO_HW_ATALLA \
 	-DOPENSSL_NO_HW_CHIL \
+	-DOPENSSL_NO_HW_CSWIFT \
 	-DOPENSSL_NO_HW_GMP \
-	-DOPENSSL_NO_HW_4758_CCA
+	-DOPENSSL_NO_HW_NURON \
+	-DOPENSSL_NO_HW_PADLOCK \
+	-DOPENSSL_NO_HW_SUREWARE \
+	-DOPENSSL_NO_HW_UBSEC
 
 OPENSSL_BUILD_CPPFLAGS_sparc = -DB_ENDIAN
 
@@ -86,4 +87,4 @@ OPENSSL_LDFLAGS +=	-L$(PARENT_ROOT)$(SFWLIBDIR)
 OPENSSL_LDFLAGS +=	-L$(SFWLIBDIR)
 
 OPENSSL_DYNFLAGS =	-R $(SFWLIBDIR)
-$(__GNUC)CFLAGS += -_gcc=-fasm
+CFLAGS +=		-_gcc=-fasm
