PSARC 2004/393 Enhancing pcic to support 32bit PC Cards 6428203 need supported cardbus driver in Solaris

--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -345,6 +345,8 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= pem
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= pcelx
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= pcser
 
+$(CLOSED_BUILD)CLOSED_MISC_KMODS	+= cardbus
+
 #
 #	I2O specific module(s)
 #
