--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -300,6 +300,8 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= pcic
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= pcser
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= pem
 
+$(CLOSED_BUILD)CLOSED_MISC_KMODS	+= cardbus
+
 # Add lvm
 #
 DRV_KMODS       += md
