6361055 cpumem SERD N/T values are wrong for Panther and Serrano L3 Data, L3 Tags, L2 Data, L2 Tags

--- a/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis/cpumem-diagnosis.conf
+++ b/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis/cpumem-diagnosis.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -28,10 +27,10 @@
 #
 # cpumem-diagnosis
 #
-setprop icache_n 2
+setprop icache_n 8
 setprop icache_t 168h
 
-setprop dcache_n 2
+setprop dcache_n 8
 setprop dcache_t 168h
 
 setprop pcache_n 2
@@ -43,17 +42,17 @@ setprop itlb_t 168h
 setprop dtlb_n 2
 setprop dtlb_t 168h
 
-setprop l2tag_n 3
-setprop l2tag_t 12h
+setprop l2tag_n 4
+setprop l2tag_t 1h
 
-setprop l2data_n 3
-setprop l2data_t 12h
+setprop l2data_n 12
+setprop l2data_t 1h
 
-setprop l3tag_n 3
-setprop l3tag_t 12h
+setprop l3tag_n 4
+setprop l3tag_t 1h
 
-setprop l3data_n 3
-setprop l3data_t 12h
+setprop l3data_n 12
+setprop l3data_t 1h
 
 setprop ce_n 2
 setprop ce_t 72h
