6261101 VAC alias handling code should be compiled out for sun4v

--- a/usr/src/uts/sun4u/Makefile.files
+++ b/usr/src/uts/sun4u/Makefile.files
@@ -46,6 +46,7 @@ CORE_OBJS +=	hardclk.o
 CORE_OBJS +=	hat_sfmmu.o
 CORE_OBJS +=	hat_kdi.o
 CORE_OBJS +=	mach_copy.o
+CORE_OBJS +=	mach_kpm.o
 CORE_OBJS +=	mach_mp_startup.o
 CORE_OBJS +=	mach_mp_states.o
 CORE_OBJS +=	mach_sfmmu.o
