--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -49,6 +49,7 @@ CORE_OBJS +=	lpad.o
 CORE_OBJS +=	mach_cpu_states.o
 CORE_OBJS +=	mach_ddi_impl.o
 CORE_OBJS +=	mach_descrip.o
+CORE_OBJS +=	mach_kpm.o
 CORE_OBJS +=	mach_mp_startup.o
 CORE_OBJS +=	mach_mp_states.o
 CORE_OBJS +=	mach_proc_init.o
