PSARC 2006/387 Zones Features For Zulu 6365741 RFE: add unique identifier to facilitate asset tracking (similar to hostid) 6384962 libzonecfg doesn't preserve owner/mode on changes 6394273 fix for CR 6305641 missed one of the hard-coded constants 6431731 zoneadm list -p (parseable) output isn't 6436841 Zonecfg needs to address alternate roots to adjust file paths 6436853 Zoneadm should allow zones to be marked as incomplete

--- a/usr/src/cmd/zoneadm/Makefile
+++ b/usr/src/cmd/zoneadm/Makefile
@@ -43,7 +43,7 @@ SRCS = $(OBJS:.o=.c)
 POFILE=zoneadm_all.po
 POFILES= $(OBJS:%.o=%.po)
 
-LDLIBS += -lzonecfg -lsocket -lgen -lpool -lbsm -lzfs
+LDLIBS += -lzonecfg -lsocket -lgen -lpool -lbsm -lzfs -luuid
 
 .KEEP_STATE:
 
